--- a/index.html
+++ b/index.html
@@ -26,22 +26,9 @@
         </button>
     </div>
 
-    <div id="modal">
-        <main>
-            <h1>افزودن یک وظیفه جدید</h1>
-            <div>
-                <input type="text" id="activity" placeholder="نام فعالیت">
-            </div>
-            <div>
-                <button id="closeBtn">انصراف</button>
-                <button id="saveBtn">ثبت</button>
-            </div>
-        </main>
-    </div>
+    <div id="modal"></div>
 
-    <ul id="optionList">
-
-    </ul>
+    <div id="optionList"></div>
 </body>
 <script src="./main.js"></script>
 
